--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -777,15 +777,17 @@ white-space: nowrap;
   height: 100%;
   width: 25.81rem;
 }
+/* .post_img>a>img{
+  width: 100%;
+} */
 .post_img_2{
   overflow: hidden;
-  border-radius: 1%;
+  /* border-radius: 1%; */
   height: 100%;
   width: 25.81rem;
 }
 .post_img_2_bijnesh{
   overflow: hidden;
-  border-radius: 1%;
   height: 100%;
   width: 35rem;
 }
@@ -794,10 +796,10 @@ white-space: nowrap;
   flex: 2;
   align-self: center;
   padding: 3.75rem;
-  height: 24rem;
+  height: 24.3rem;
   width: 25.81rem;
-  margin-left: 3rem;
   overflow: hidden;
+  margin-bottom: 0.5rem;
 }
 .post_title>a{
   color: #000;
@@ -903,9 +905,10 @@ white-space: nowrap;
   flex: 2;
   align-self: center;
   padding: 3.75rem;
-  height: 24.1rem;
+  height: 24.2rem;
   width: 25.81rem;
   overflow: hidden;
+  margin-bottom: 0.5rem;
 }
 .post_title_2>a{
   color: #fff;
@@ -950,11 +953,12 @@ white-space: nowrap;
   flex: 2;
   align-self: center;
   padding: 3.75rem;
-  height: 24rem;
+  height: 24.2rem;
   width: 25.81rem;
   overflow: hidden;
   justify-content: center;
   align-items: center;
+  margin-bottom: 0.5rem;
 
 }
 .post_title_3>a{
