--- a/src/styles/Admin.module.css
+++ b/src/styles/Admin.module.css
@@ -438,6 +438,8 @@
   
   }
   .content_col_form_group>input{
+    display: flex;
+    align-items: center;
     font-size: 1rem;
     font-weight: 500;
     height: 2.5rem;
@@ -453,6 +455,9 @@
   .content_col_form_group>textarea{
     overflow: auto;
     resize: vertical;
+    width: 100%;
+    height: 7rem;
+    padding: 1rem;
   }
   .content_details_page1{
     height: 20rem;
@@ -578,4 +583,6 @@
  }
  .dashcontenthome{
   color: #fff;
+  margin-left: 5rem;
+  margin-top: 5rem;
  }
