--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,8 +4,8 @@
 }
 .admindashcontainer{
   display: flex;
-  margin-left: 35rem;
-  top: -40rem;
+  margin-left: 20rem;
+  top: -50rem;
   position: relative;
  }
 .contentdetailpage{
@@ -215,7 +215,7 @@ white-space: nowrap;
 .latest_news:hover{
   background-color: #fda04e;
 }
-.latest_news, .login_account, .trending_news{
+.latest_news, .login_account1, .trending_news{
   height: 2rem;
   width: 2rem;
   border-radius: 50%;
@@ -225,12 +225,7 @@ white-space: nowrap;
   margin-left: 0.5rem;
   transition: all .3s ease;
 }
-.login_account1{
-  display: none;
-}
-.nav_menu1{
-  display: none;
-}
+
 .activity_icon{
   width: 100%;
   height: 100%;
@@ -241,7 +236,7 @@ white-space: nowrap;
   width: 2rem;
   height: 2rem;
 }
-.nav_menu{
+.nav_menu1{
   height: 2.3rem;
   width: 2.7rem;
   border-radius: 50%;
@@ -1611,6 +1606,11 @@ white-space: nowrap;
     overflow: hidden;
   }
 } */
+@media (min-width: 1025px) {
+  .nav_menu,.login_account {
+    display: none;
+  }
+}
 @media (min-width: 768px) and (max-width: 1024px){
   .side_menu{
     right: 0;
@@ -1687,12 +1687,16 @@ white-space: nowrap;
     margin: 1rem 0 1rem 0;
   }
 .topheader{
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   border-bottom: solid 1px rgba(34,96,191,.14);
   overflow: hidden;
   position: sticky;
+  top: 0;
+  z-index: 9999;
+  background-color: #fff;
  
 }
 .container{
@@ -1706,11 +1710,11 @@ white-space: nowrap;
   display: none;
 }
 .login_account{
-  height: 3rem;
-  width: 4rem;
+  height: 2.5rem;
+  width: 3rem;
   border-radius: 50%;
   text-align: center;
-  padding-top: 0.375rem;
+  /* padding-top: 0.375rem; */
   cursor: pointer;
   margin-left: 0.5rem;
   transition: all .3s ease;
@@ -1725,11 +1729,20 @@ white-space: nowrap;
   width: 3rem;
   height: 3rem;
 }
+.logo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 10rem;
+  height: 4rem;
+  margin: 0;
+  padding: 0;
+}
 .nav_menu{
   display: flex;
   align-items: center;
-  height: 3rem;
-  width: 4rem;
+  height: 2.5rem;
+  width: 3rem;
   border-radius: 50%;
   text-align: center;
   cursor: pointer;
@@ -1858,6 +1871,38 @@ white-space: nowrap;
   font-family: mukta,sans-serif;
   font-size: 1.125rem;
   overflow: hidden;
+}
+.col_left_bijnesh{
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 100%;
+}
+.span_12_bijnesh{
+  display: block;
+}
+.samachar_spot_news_bijnesh{
+  display: block;
+}
+.post_img_2_bijnesh{
+  overflow: hidden;
+  height: 100%;
+  width: auto;
+}
+.post_img_2_bijnesh>a>img{
+  width: 100%;
+  height: auto;
+}
+.post_title_samachar{
+  width: auto;
+}
+.span_4_bijnesh{
+  grid-column: span 6;
+}
+/* .post_1tr_binesh{
+  
+} */
+.post_title_2{
+  width: auto;
 }
 .prachar{
   display: none;
@@ -2042,6 +2087,9 @@ white-space: nowrap;
     overflow: hidden;
     position: sticky;
     padding: 0.5rem 0;
+    top: 0;
+    background-color: #fff;
+    z-index: 9999;
    
   }
   .container{
@@ -2247,6 +2295,39 @@ white-space: nowrap;
     position: relative;
     max-width: 100%;
   
+  }
+  .col_left_bijnesh{
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 100%;
+  }
+  .span_12_bijnesh{
+    display: block;
+  }
+  .samachar_spot_news_bijnesh{
+    display: block;
+  }
+  .post_img_2_bijnesh{
+    overflow: hidden;
+    height: auto;
+    width: 100%;
+  }
+  .post_img_2_bijnesh>a>img{
+    width: 100%;
+    height: auto;
+  }
+  .span_4_bijnesh{
+    grid-column: span 3;
+  }
+  .post_1tr_binesh{
+  width: 100%;
+}
+.post_1tr_binesh>a>img{
+  width: 100%;
+  height: auto;
+}
+  .post_title_samachar{
+    width: auto;
   }
   .samachar_section{
     width: 100%;
@@ -2558,10 +2639,13 @@ white-space: nowrap;
   height: 100%;
   width: 100%;
   z-index: 99999;
+  transition: background-color 0.3s ease-in-out;
 
 }
 .menu_item{
-  padding-left: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
 }
 .site_footer{
@@ -2600,6 +2684,7 @@ white-space: nowrap;
   list-style: none;
   padding: 0;
   margin-left: 0.8rem;
+  text-decoration: none;
 }
 .mobfooter>ul>li{
   margin: 0.5rem 0;
@@ -2607,6 +2692,12 @@ white-space: nowrap;
   font-family: mukta,sans-serif;
   font-weight: 600;
   cursor: pointer;
+  text-decoration: none;
+}
+.mobfooter>ul>li>a{
+  text-decoration: none;
+  color: rgba(0,0,0,.48);
+
 }
 .footer_info{
   padding: 1rem;
